ADDED SOFT COLORS FOR MUTED TEXT

--- a/public/index.html
+++ b/public/index.html
@@ -313,7 +313,8 @@
         <div class="col-md-4">
           <div class="card text-center">
             <div class="card-header">
-              Default (Secondary)
+              <h5>Default (Secondary)</h6>
+              <h5 class="text-secondary-soft">Secondary soft</h5>
             </div>
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
@@ -322,13 +323,15 @@
             </div>
             <div class="card-footer">
               Default (Tertiary)
+              <span class="text-tertiary-soft">Tertiary soft</span>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card text-center" data-bs-theme="dark">
             <div class="card-header bg-quaternary text-dark">
-              Quaternary
+              <h5>Quaternary</h5>
+              <h5 class="text-quaternary-soft">Quaternary soft</h5>
             </div>
             <div class="card-body">
               <h5 class="card-title">This card will ALWAYS be DARK</h5>
@@ -337,13 +340,15 @@
             </div>
             <div class="card-footer bg-light">
               Light
+              <span class="text-body-secondary">Text body secondary</span>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card text-center" data-bs-theme="light">
             <div class="card-header bg-quaternary text-dark">
-              Quaternary
+              <h5>Quaternary</h5>
+              <h5 class="text-quaternary-soft">Quaternary soft</h5>
             </div>
             <div class="card-body">
               <h5 class="card-title">This card will ALWAYS be LIGHT (ez dabil)</h5>
@@ -352,6 +357,7 @@
             </div>
             <div class="card-footer bg-dark text-light">
               Dark
+              <span class="text-body-secondary">Text body secondary</span>
             </div>
           </div>
         </div>
@@ -360,7 +366,7 @@
           <div class="card text-center">
             <div class="card-header bg-mgep text-dark">
               MGEP
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio architecto similique maiores voluptatum
+              <p class="text-mgep-soft">text-mgep-soft Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio architecto similique maiores voluptatum
                 dignissimos, earum numquam, sit autem cupiditate in laudantium mollitia consequuntur qui impedit vero
                 suscipit recusandae. Illum at officia minima!</p>
             </div>
@@ -371,6 +377,7 @@
             </div>
             <div class="card-footer bg-dark text-white ">
               Dark
+              <span class="text-body-secondary">Text body secondary</span>
             </div>
           </div>
         </div>
@@ -378,7 +385,8 @@
         <div class="col-md-4">
           <div class="card text-center">
             <div class="card-header bg-huezi">
-              HUEZI
+              <h5>HUEZI</h5>
+              <h5 class="text-huezi-soft">HUEZI soft</h5>
             </div>
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
@@ -387,7 +395,7 @@
             </div>
             <div class="card-footer bg-quaternary">
               Quaternary
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat est laudantium consequuntur suscipit
+              <p class="text-quaternary-soft">text-quaternary-soft Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat est laudantium consequuntur suscipit
                 quas error nulla tempora velit et. Magni eius in sunt velit earum placeat est id sequi minima vero. A.
               </p>
             </div>
@@ -398,7 +406,8 @@
         <div class="col-md-4">
           <div class="card text-center">
             <div class="card-header bg-eteo text-dark">
-              ETEO
+              <h5>ETEO</h5>
+              <h5 class="text-eteo-soft">ETEO soft</h5>
             </div>
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
@@ -414,7 +423,24 @@
         <div class="col-md-4">
           <div class="card text-center">
             <div class="card-header bg-pro">
-              PRO
+              <h5>PRO</h5>
+              <h5 class="text-pro-soft">PRO soft</h5>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-pro">Go somewhere</a>
+            </div>
+            <div class="card-footer text-white bg-dark">
+              Dark
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card text-center">
+            <div class="card-header bg-cta">
+              <h5 class="text-dark">CTA</h5>
+              <h5 class="text-cta-soft">CTA soft</h5>
             </div>
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
